Fixed score stats being squished and improvement bars colors

--- a/src/themes/mirror-low.less
+++ b/src/themes/mirror-low.less
@@ -210,8 +210,7 @@ body {
 
 // Remove some strange backgrounds&shadows
 .leaderboard,
-.chart,
-.details-with-shadow {
+.beatleader-swipe-card .chart {
     background: none !important;
     box-shadow: none !important;
 }
