--- a/src/themes/mirror.less
+++ b/src/themes/mirror.less
@@ -252,8 +252,7 @@ nav.ssr-page-container {
 }
 
 // Remove some strange backgrounds&shadows
-.chart,
-.details-box {
+.beatleader-swipe-card .chart {
     background: none !important;
     box-shadow: none !important;
 }
