--- a/src/themes/unbounded.less
+++ b/src/themes/unbounded.less
@@ -191,8 +191,7 @@ body {
 
 // Remove some strange backgrounds&shadows
 .leaderboard,
-.chart,
-.details-box {
+.beatleader-swipe-card .chart {
     background: none !important;
     box-shadow: none !important;
 }
